example/k8s/kube-manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metronomikon
  namespace: metronomikon-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metronomikon
  template:
    metadata:
      labels:
        app: metronomikon
    spec:
      serviceAccountName: metronomikon
      containers:
        - name: metronomikon
          image: applause/metronomikon:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ping
              port: http
          volumeMounts:
            - name: config-volume
              mountPath: /etc/metronomikon
      volumes:
        - name: config-volume
          configMap:
            name: metronomikon
            optional: true
---
apiVersion: v1
kind: Service
metadata:
  name: metronomikon
  namespace: metronomikon-test
spec:
  type: NodePort
  selector:
    app: metronomikon
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 32000
